# interface

./: .env.example  .gitignore  README.md  TODO.md  adhd_detection.py  ai_agent.py  interactive_assessment.py  main.py  pyproject.toml  requirements.txt  speech_to_text.py  test_integration_ui_audio.py  test_interactive_assessment.py  text_to_speech.py  tools.py
.kiro/specs/interactive-adhd-detection/: design.md  requirements.md  tasks.md
