[project]
name = "dora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.17.0",
    "gradio>=5.49.1",
    "groq>=0.32.0",
    "gtts>=2.5.4",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.10",
    "pydub>=0.25.1",
    "speechrecognition>=3.14.3",
    "webrtcvad>=2.0.10",
    "speechbrain>=1.0.0",
    "pyaudio>=0.2.13",
]

[tool.setuptools]
py-modules = ["adhd_detection", "ai_agent", "main", "speech_to_text", "text_to_speech", "tools"]
